Updates from other branch included Json and DB schema updated