@@ -2,17 +2,11 @@ plugins {
     id 'java'
     id 'idea'
     id 'org.springframework.boot' version '2.0.2.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.7.RELEASE'
 }
-
-apply plugin: 'io.spring.dependency-management'
 
 group 'io.university'
 version '1.0.0'
-
-bootJar {
-    mainClassName = 'io.university.AppStarter'
-    version =  '1.0.0'
-}
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -26,6 +20,19 @@ repositories {
     maven {
         url "https://oss.sonatype.org/content/repositories/snapshots"
     }
+}
+
+bootRun {
+    main = 'io.university.AppStarter'
+
+    args = ["--add-modules=java.xml.bind"]
+
+    environment([
+            "SERVER_PORT"   : System.getenv("SERVER_PORT") ?: "8080",
+            "ORA_USER"      : System.getenv("ORA_USER") ?: "sys as sysdba",
+            "ORA_PASS"      : System.getenv("ORA_PASS") ?: "Oradoc_db1",
+            "ORA_URL"       : System.getenv("ORA_URL") ?: "jdbc:oracle:thin:@localhost:1521:ORCLCDB"
+    ])
 }
 
 dependencies {
